hphp/hack/test/typecheck/reified_generics/type_constants_across.php.like_types.exp
File "type_constants_across.php", line 11, characters 10-17:
Invalid "as" expression hint (Typing[4195])
File "type_constants_across.php", line 19, characters 23-24:
The "as" operator cannot be used with the abstract type constant Tx because it is not marked <<__Enforceable>>
File "type_constants_across.php", line 12, characters 10-17:
Invalid "as" expression hint (Typing[4195])
File "type_constants_across.php", line 6, characters 19-23:
The "as" operator cannot be used with a union
File "type_constants_across.php", line 13, characters 10-17:
Invalid "as" expression hint (Typing[4195])
File "type_constants_across.php", line 7, characters 19-24:
The "as" operator cannot be used with a union
File "type_constants_across.php", line 14, characters 10-18:
Invalid "as" expression hint (Typing[4195])
File "type_constants_across.php", line 8, characters 20-25:
The "as" operator cannot be used with a union
